fix: preserve Rocks search pages and backfill upgraded generations